--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e9c05fd1",
+   "id": "18c985cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "1b695de5",
+   "id": "77bf53d7",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0ec1f075",
+   "id": "63b121a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2981108b",
+   "id": "06dd7c5e",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b65d957a",
+   "id": "57fc1202",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f7c92f52",
+   "id": "c17bb65c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1c67b2a3",
+   "id": "7b32c285",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "755847ed",
+   "id": "dc8cf2bc",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "db50a23b",
+   "id": "5498aa76",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "bbdeeaba",
+   "id": "45f12cbb",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "b99401d4",
+   "id": "54e532a5",
    "metadata": {},
    "outputs": [
     {
@@ -214,8 +214,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "fbfb284d",
+   "execution_count": 46,
+   "id": "e3b773c1",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        " ('Gutenberg’s', 1)]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,13 +245,14 @@
     "data = [\"Project\",\"Gutenberg’s\",\"Alice’s\",\"Adventures\",\n",
     "\"in\",\"Wonderland\",\"Project\",\"Gutenberg’s\",\"Adventures\",\n",
     "\"in\",\"Wonderland\",\"Project\",\"Gutenberg’s\"]\n",
-    "list(map(lambda x: (x,1), data))"
+    "list(map(lambda x: (x,1), data))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "54cced74",
+   "id": "d101a8d5",
    "metadata": {},
    "outputs": [
     {
@@ -276,10 +277,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94d6d039",
+   "id": "e95d76af",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "[(x, 1) for x in data]  # list comprehension\n",
+    "######\n",
+    "res = []\n",
+    "for x in data:\n",
+    "    res.append((x, 1))"
+   ]
   }
  ],
  "metadata": {
