--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "99898b2d",
+   "id": "8212001f",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "739b26f0",
+   "id": "4907069d",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "8eca9b0b",
+   "id": "12b5aa4e",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "d14e3296",
+   "id": "c7451f2b",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "246b77b9",
+   "id": "322ad43c",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "137f1ec2",
+   "id": "69247bb4",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "c7b5f2f9",
+   "id": "40becf4d",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "28d387c4",
+   "id": "c4d3fcc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcabcad9",
+   "id": "a89dea5d",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -212,6 +212,8 @@
     "    * mot clé `def`, suivu du nom de la fonction, suivi de la liste des paramètres entre parenthèses\n",
     "    * on peut mettre des valeurs par défaut en mettant `(param= MA_VALEUR)`\n",
     "    * il faut faire attention aux valeurs par défaut qui peuvent être mutées et plutôt utiliser des types immutables (nombres, chaine de caractères, tuples, None)\n",
+    "    \n",
+    "* listes en compréhension (co\n",
     "\n",
     "## Après-midi"
    ]
@@ -219,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1184091c",
+   "id": "2c9a6fef",
    "metadata": {},
    "outputs": [],
    "source": []
