--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8212001f",
+   "id": "7c8c5ebb",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "4907069d",
+   "id": "1eb62bd1",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "12b5aa4e",
+   "id": "aaeb9c36",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "c7451f2b",
+   "id": "06c493c4",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "322ad43c",
+   "id": "2eed226c",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "69247bb4",
+   "id": "124689c9",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "40becf4d",
+   "id": "adbab7c4",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "c4d3fcc4",
+   "id": "3c1d02e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a89dea5d",
+   "id": "aec2a8d2",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -213,7 +213,7 @@
     "    * on peut mettre des valeurs par défaut en mettant `(param= MA_VALEUR)`\n",
     "    * il faut faire attention aux valeurs par défaut qui peuvent être mutées et plutôt utiliser des types immutables (nombres, chaine de caractères, tuples, None)\n",
     "    \n",
-    "* listes en compréhension (co\n",
+    "* listes en compréhension (comprehension list) : `[x ** 2 for x in range(10)]`\n",
     "\n",
     "## Après-midi"
    ]
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c9a6fef",
+   "id": "14bb2c9d",
    "metadata": {},
    "outputs": [],
    "source": []
