--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "340f11a6",
+   "id": "2edc64b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "65e2b928",
+   "id": "50882bcf",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6038f7f6",
+   "id": "7d87d2bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a932bf58",
+   "id": "18cd2ed0",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "fc74222c",
+   "id": "d78bf904",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "97775d55",
+   "id": "72b57932",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "f46d6a85",
+   "id": "cd5ba1e6",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a8efcda6",
+   "id": "6c8d4484",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0832de4b",
+   "id": "03c2ecf7",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e8def4d4",
+   "id": "fb47825f",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "8b9207b5",
+   "id": "603a6b39",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8f6f2d79",
+   "id": "ee778d5c",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "74caf684",
+   "id": "4f302057",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "eab28242",
+   "id": "3e710ecc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,8 +290,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "id": "d21f442d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def ma_nouvelle_fonction():\n",
+    "    return ma_nouvelle_fonction_autre()\n",
+    "\n",
+    "def ma_nouvelle_fonction_autre():\n",
+    "    return 3\n",
+    "\n",
+    "ma_nouvelle_fonction()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a4ce6d22",
+   "id": "6f97541d",
    "metadata": {},
    "outputs": [],
    "source": []
