--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3cdcf515",
+   "id": "d701a5a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c8e9e9ef",
+   "id": "9531a3bc",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c69297e8",
+   "id": "3c48f310",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "604ac4cc",
+   "id": "437b9fa1",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7880d2c7",
+   "id": "77bc909f",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a93aacf1",
+   "id": "fd2ed028",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7ae12a56",
+   "id": "f6cf83b6",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "78507eea",
+   "id": "58d9ded9",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "fbfe17b3",
+   "id": "dbe6d8bc",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "004f6ba2",
+   "id": "be5d715f",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "9ffe8b41",
+   "id": "dc9e210c",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "9e76fe0a",
+   "id": "a779d375",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "cad55523",
+   "id": "21805e9a",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "fc8eb4b2",
+   "id": "cfc356d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "249ba8c4",
+   "id": "2584ec8c",
    "metadata": {},
    "outputs": [
     {
@@ -317,11 +317,44 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a2157c6",
+   "id": "83018684",
    "metadata": {},
    "source": [
-    "# Types de données "
+    "# Types de données en Python"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "829c3002",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "[2, 3, 4]\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "ma_liste = [1, 2, 3]\n",
+    "ma_liste.append(4)\n",
+    "print(ma_liste)\n",
+    "ma_liste.pop(0)\n",
+    "print(ma_liste)\n",
+    "print(len(ma_liste))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b37743f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
