--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d701a5a0",
+   "id": "7005f0ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9531a3bc",
+   "id": "99659c32",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "3c48f310",
+   "id": "5d786962",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "437b9fa1",
+   "id": "2394af07",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "77bc909f",
+   "id": "c12fd6be",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "fd2ed028",
+   "id": "866388a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "f6cf83b6",
+   "id": "fabd3cdd",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "58d9ded9",
+   "id": "79a13342",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "dbe6d8bc",
+   "id": "c54c217b",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "be5d715f",
+   "id": "b3d4013d",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "dc9e210c",
+   "id": "69ae763c",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a779d375",
+   "id": "68d89a39",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "21805e9a",
+   "id": "b453dc17",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "cfc356d5",
+   "id": "5f0e39ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "2584ec8c",
+   "id": "a4dcf713",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83018684",
+   "id": "1fa15dd1",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "829c3002",
+   "id": "14e75212",
    "metadata": {},
    "outputs": [
     {
@@ -350,8 +350,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "id": "69c0504d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 'riri', 3, [1, 2, 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ma_liste = [1, \"riri\", 3, [1, 2, 3]]\n",
+    "print(ma_liste)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6b37743f",
+   "id": "f36f01bc",
    "metadata": {},
    "outputs": [],
    "source": []
