--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7005f0ad",
+   "id": "58887007",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "99659c32",
+   "id": "91cb1f0f",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5d786962",
+   "id": "9a080973",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2394af07",
+   "id": "26ce9614",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c12fd6be",
+   "id": "15e98ebd",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "866388a3",
+   "id": "8da1b2ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "fabd3cdd",
+   "id": "cdab1895",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "79a13342",
+   "id": "9adbb362",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c54c217b",
+   "id": "b331d8c4",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b3d4013d",
+   "id": "58da04f2",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "69ae763c",
+   "id": "e37723b2",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "68d89a39",
+   "id": "b8f7b587",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "b453dc17",
+   "id": "cf3d18ec",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "5f0e39ae",
+   "id": "58e7d656",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "a4dcf713",
+   "id": "73acc04e",
    "metadata": {},
    "outputs": [
     {
@@ -317,16 +317,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fa15dd1",
+   "id": "a60744b9",
    "metadata": {},
    "source": [
     "# Types de données en Python"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aa308675",
+   "metadata": {},
+   "source": [
+    "## Listes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "14e75212",
+   "id": "8ab65bd9",
    "metadata": {},
    "outputs": [
     {
@@ -350,27 +358,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "69c0504d",
+   "execution_count": 58,
+   "id": "1fb4cf1b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 'riri', 3, [1, 2, 3]]\n"
+      "[1, 'riri', 3, [1, 2, 3]]\n",
+      "[1, 2, 3, [1, 2, 3]]\n"
      ]
     }
    ],
    "source": [
     "ma_liste = [1, \"riri\", 3, [1, 2, 3]]\n",
+    "print(ma_liste)\n",
+    "ma_liste[1] = 2\n",
     "print(ma_liste)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9968e6b1",
+   "metadata": {},
+   "source": [
+    "## Tuples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "38da57c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "mon_tuple = (1, 2, 3)\n",
+    "print(type(mon_tuple))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "53ab84ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [57], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m mon_tuple\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;241m3\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
+     ]
+    }
+   ],
+   "source": [
+    "mon_tuple.append(3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f36f01bc",
+   "id": "a7ade1ed",
    "metadata": {},
    "outputs": [],
    "source": []
