--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "58887007",
+   "id": "2fd918d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "91cb1f0f",
+   "id": "3cee272d",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9a080973",
+   "id": "b311cd05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "26ce9614",
+   "id": "32dd7ce5",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "15e98ebd",
+   "id": "1a6ef917",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "8da1b2ac",
+   "id": "75ab6f4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "cdab1895",
+   "id": "984b5e71",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "9adbb362",
+   "id": "1c17cadf",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b331d8c4",
+   "id": "9fa3e641",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "58da04f2",
+   "id": "06d82da3",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "e37723b2",
+   "id": "371ddab5",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b8f7b587",
+   "id": "eb407527",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "cf3d18ec",
+   "id": "6ec3ef0d",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "58e7d656",
+   "id": "2b61b8cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "73acc04e",
+   "id": "f2edab70",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a60744b9",
+   "id": "3d2f21b5",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa308675",
+   "id": "aec7770b",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "8ab65bd9",
+   "id": "38934491",
    "metadata": {},
    "outputs": [
     {
@@ -358,21 +358,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "1fb4cf1b",
+   "execution_count": 60,
+   "id": "c89cad4e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 'riri', 3, [1, 2, 3]]\n",
-      "[1, 2, 3, [1, 2, 3]]\n"
+      "[1, 'riri', 3, [1, [2], 3, (1, 2, 3)]]\n",
+      "[1, 2, 3, [1, [2], 3, (1, 2, 3)]]\n"
      ]
     }
    ],
    "source": [
-    "ma_liste = [1, \"riri\", 3, [1, 2, 3]]\n",
+    "ma_liste = [1, \"riri\", 3, [1, [2], 3, (1, 2, 3)]]\n",
     "print(ma_liste)\n",
     "ma_liste[1] = 2\n",
     "print(ma_liste)"
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9968e6b1",
+   "id": "e3da1732",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "38da57c5",
+   "id": "911fbe4b",
    "metadata": {},
    "outputs": [
     {
@@ -401,14 +401,14 @@
     }
    ],
    "source": [
-    "mon_tuple = (1, 2, 3)\n",
+    "mon_tuple = (1, 2, [3, 2])\n",
     "print(type(mon_tuple))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "53ab84ec",
+   "id": "a96a5cc6",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7ade1ed",
+   "id": "b187be36",
    "metadata": {},
    "outputs": [],
    "source": []
