--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2fd918d8",
+   "id": "9e11150e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3cee272d",
+   "id": "81938e50",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b311cd05",
+   "id": "1e04439c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "32dd7ce5",
+   "id": "3c9e5883",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "1a6ef917",
+   "id": "2c25f7c2",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "75ab6f4e",
+   "id": "9d81fb03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "984b5e71",
+   "id": "39dffb88",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "1c17cadf",
+   "id": "1e66789e",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "9fa3e641",
+   "id": "c21245e8",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "06d82da3",
+   "id": "afc460c3",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "371ddab5",
+   "id": "29f3ee25",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "eb407527",
+   "id": "452725ee",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "6ec3ef0d",
+   "id": "5b34114f",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "2b61b8cc",
+   "id": "0bd5d6ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f2edab70",
+   "id": "ffa97afb",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d2f21b5",
+   "id": "c18376dc",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aec7770b",
+   "id": "853229e4",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "38934491",
+   "id": "fd3aec04",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "c89cad4e",
+   "id": "b913e521",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3da1732",
+   "id": "487ad801",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -388,27 +388,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "911fbe4b",
+   "execution_count": 62,
+   "id": "6ddfd2cc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'tuple'>\n"
+      "<class 'tuple'>\n",
+      "(1, 2, [3, 2], (2, 432))\n"
      ]
     }
    ],
    "source": [
-    "mon_tuple = (1, 2, [3, 2])\n",
-    "print(type(mon_tuple))"
+    "mon_tuple = (1, 2, [3, 2], (2, 432))\n",
+    "print(type(mon_tuple))\n",
+    "print(mon_tuple)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "a96a5cc6",
+   "id": "96ffa9e2",
    "metadata": {},
    "outputs": [
     {
@@ -429,11 +431,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "id": "2c56262e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [64], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m mon_tuple[\u001b[38;5;241m2\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "mon_tuple[2] = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b187be36",
+   "id": "445238ff",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "[\n",
+    "    (1, 2)\n",
+    "]"
+   ]
   }
  ],
  "metadata": {
